--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="subheading mb-5">
                         <a href="mailto:angeliki.loukatou@edfenergy.com">angeliki.loukatou@edfenergy.com</a>
                     </div>
-                    <p class="lead mb-5">Most of the people I know call me Kelly. I currently work as a Lead Research Engineer at the R&D Centre of EDF Energy UK and I am the Digital Lead of EDF Women's Network. Before that, I was a modelling analyst at Energy Systems Catapult, working as part of their system integration and innovation team and exploring energy storage and second-life batteries. I have a passion for energy storage and hence, I pursued a PhD in battery storage in the Centre for Doctoral Training in Power Networks of The University of Manchester (UoM). In addition, I am currently working towards chartered engineering and I also obtained my first professional qualification as Certified Associate in Project Management (CAPM) with the Project Management Institute (PMI) in December 2017.</p>
+                    <p class="lead mb-5">Most of the people I know call me Kelly. I currently work as an Energy Insight Lead at National Grid ESO, developing their Future Energy Scenarios. Before that, I was a Lead Research Engineer at the R&D Centre of EDF Energy UK and I am the Digital Lead of EDF Women's Network. Before that, I was a modelling analyst at Energy Systems Catapult, working as part of their system integration and innovation team and exploring energy storage and second-life batteries. I have a passion for energy storage and hence, I pursued a PhD in battery storage in the Centre for Doctoral Training in Power Networks of The University of Manchester (UoM). In addition, I am currently working towards chartered engineering and I also obtained my first professional qualification as Certified Associate in Project Management (CAPM) with the Project Management Institute (PMI) in December 2017.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/angeliki-l/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/AngelikiLk"><i class="fab fa-github"></i></a>
@@ -66,6 +66,18 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Energy Insight Lead</h3>
+                            <div class="subheading mb-3">National Grid ESO, Strategy and Regulation</div>
+                                <p> Main tasks include: </p>
+                                <ul> 
+                                    <li> Engaging with various units across the business to develop, write and publish the Future Energy Scenarios (FES)</li>
+                                </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">October 2022 - Present</span></div>
+                    </div>
+                    
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Lead Research Engineer</h3>
                             <div class="subheading mb-3">EDF Energy UK R&D</div>
                                 <p> Main tasks include: </p>
@@ -79,7 +91,7 @@
                                     <li>Working towards Chartered Engineering status </li>
                                 </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2021 - Present</span></div>   
+                        <div class="flex-shrink-0"><span class="text-primary">December 2021 - September 2022</span></div>   
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
