--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <span class="text-primary">Loukatou</span>
                     </h1>
                     <div class="subheading mb-5">
-                        <a href="mailto:angeliki.loukatou@edfenergy.com">angeliki.loukatou@edfenergy.com</a>
+                        <a href="mailto:angeliki.loukatou@nationalgrideso.com">angeliki.loukatou@nationalgrideso.com</a>
                     </div>
                     <p class="lead mb-5">Most of the people I know call me Kelly. I currently work as an Energy Insight Lead at National Grid ESO, developing their Future Energy Scenarios. Before that, I was a Lead Research Engineer at the R&D Centre of EDF Energy UK and I am the Digital Lead of EDF Women's Network. Before that, I was a modelling analyst at Energy Systems Catapult, working as part of their system integration and innovation team and exploring energy storage and second-life batteries. I have a passion for energy storage and hence, I pursued a PhD in battery storage in the Centre for Doctoral Training in Power Networks of The University of Manchester (UoM). In addition, I am currently working towards chartered engineering and I also obtained my first professional qualification as Certified Associate in Project Management (CAPM) with the Project Management Institute (PMI) in December 2017.</p>
                     <div class="social-icons">
