--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
                                 <ol>
                                     <li> Collaboration with Chile, Innovation in the area of transport and energy storage, 30-03-22</li>
                                     <li> Collaboration with UK, Women in Engineering panel during PMAPS, June 2022</li>
+                                    <li> Panel discussion with IEEE PES Women in Power with theme "Inspiring the Next Generation of Female Engineers", September 2022 </li>
                                 </ol>
                                 
                         </div>
@@ -336,6 +337,8 @@
                     </ol>
                     <p>Inclusion, diversity and volunteering events</p>
                     <ol>
+                        <li> Transition from academia to industry for young professionals, Supergen Energy Storage Network Conference, October 2022</li>
+                        <li> Panel discussion with IEEE PES Women in Power with theme "Inspiring the Next Generation of Female Engineers", September 2022</li>
                         <li> International Women in Engineering Day - Roundtable <a href="https://cigre.org.uk/events/cigre-uk-women-in-engineering-day-round-table-discussion-23rd-june/"> discussion!</a> (How to build emotional resilience when working on demanding projects), Cigre UK, June 2022 (Starting at 22h:00min) </li>
                         <li> <a href="https://www.linkedin.com/feed/update/urn:li:activity:6906960614091317248/"> Interview with EDF Energy UK R&D </a> for IWD 2022. Please find it <a href="https://www.edfenergy.com/for-home/energywise/-interview-angeliki-international-womens-day"> here</a>. </li>
                         <li> CIGRE UK NGN Women in Energy Roundtable discussion, October 2021. Please find the recording <a href="https://register.gotowebinar.com/recording/280855270776496651"> here</a>. </li>
