--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Database: Queries and Requests from Python or R
+                            Databases: Queries and Requests from Python or R with SQL 
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
