--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                 <ul> 
                                     <li> Engaging with various units across the business to develop, write and publish the Future Energy Scenarios (FES)</li>
                                     <li> Leading/Coordinating the flexibility activities regarding FES (supply, demand, electricity storage, hydrogen) </li>
-                                    <li> Advanced data visualisation with Python (matplotlib, plotly, dash) </li>
+                                    <li> Advanced data visualisation with Python (matplotlib, plotly, seaborn, dash) </li>
                                     <li> Use of PLEXOS for unit-commitment of future possible credible pathways to 2035/2050 </li>
                                     <li> Design of the data list needed for Future System Operator </li>
                                     <li> Active member of agile ways of thinking working group </li>
