--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                     <li> Use of PLEXOS for unit-commitment of future possible credible pathways to 2035/2050 </li>
                                     <li> Design of the data list needed for Future System Operator </li>
                                     <li> Active member of agile ways of thinking working group </li>
-                                    <li> Event lead of the Women in National Grid network </li>
+                                    <li> Event lead for the 'I am remarkable' initiative from the Women in National Grid network </li>
                                 </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">October 2022 - Present</span></div>
@@ -256,6 +256,7 @@
                                     <li> Collaboration with Chile, Innovation in the area of transport and energy storage, 30-03-22</li>
                                     <li> Collaboration with UK, Women in Engineering panel during PMAPS, June 2022</li>
                                     <li> Panel discussion with IEEE PES Women in Power with theme "Inspiring the Next Generation of Female Engineers", September 2022 </li>
+                                    <li> Women in Power session during MEEPS 2022 "Towards a sustainable and diverse future", November 2022 </li>
                                 </ol>
                                 
                         </div>
@@ -333,6 +334,7 @@
                     <h2 class="mb-5">Presentations</h2>
                     <p>Energy-storage and low-carbon technologies related presentations</p>
                     <ol>
+                        <li> Effective ways of working with energy storage, during Manchester's MEEPS Conference, November 2022. </li>
                         <li> The business case of Green Hydrogen, during Cigre Paris Showcase August 2022. </li>
                         <li> Statistical modelling of electricity modelling in day-ahead markets, during PMAPS conference June 2022. </li>
                         <li> Presentation of Grid Energy Management Storage Models, at the Optimisation Group of Newcastle University, February 2022. Please find the video <a href="https://www.youtube.com/watch?v=6bWju_lT9BE&list=PLQbrGIdhp3aFF8VCzrHiNFVvl5G-2lRuU&index=6"> here</a>. </li>
