--- a/index.html
+++ b/index.html
@@ -334,6 +334,7 @@
                     <h2 class="mb-5">Presentations</h2>
                     <p>Energy-storage and low-carbon technologies related presentations</p>
                     <ol>
+                        <li> The role of energy storage in the GB energy system, during Energy Systems Catapult Dissemination Event for Port Decarbonisation, November 2022. </li>
                         <li> Effective ways of working with energy storage, during Manchester's MEEPS Conference, November 2022. </li>
                         <li> The business case of Green Hydrogen, during Cigre Paris Showcase August 2022. </li>
                         <li> Statistical modelling of electricity modelling in day-ahead markets, during PMAPS conference June 2022. </li>
