--- a/index.html
+++ b/index.html
@@ -369,6 +369,9 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Publications</h2>
                     <ol> 
+                         <li> 
+                             Potential electricity storage routes towards 2050, <a href="https://www.nationalgrideso.com/document/273166/download"> ESO Thought Piece</a> at National Grid ESO, December 2022.
+                        </li>    
                          <li>
                              Business cases for green hydrogen, Paris Cigre Showcase 2022, August 2022.
                          </li>
