--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
                                     <li> Our role is to promote female power engineers in academia and industry, liaising between those who have established themselves in their respective area and are now serving as role models or mentors, and early or mid-career engineers who seek guidance and advice on their way to becoming leaders themselves</li>
                                     <li> WiP in the UK and Ireland is organising workshops, webinars and similar events to facilitate knowledge exchange, networking and collaboration within and between academia and industry</li>
                                     <li> Interact with the IEEE Power&Energy Long-Range UK Planning Committee - Business Developments, Global Policy Engagement, and Next Generation of Leadership </li>
+                                    <li> Principal coordinator of the first IEEE PES WiP mentoring programme in Region 8 (Europe, Middle East, Africa) </li>
                                 </ul>
                                 <p>Events being organised:</p>
                                 <ol>
@@ -260,7 +261,7 @@
                                 </ol>
                                 
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">February 2022 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">November 2021 - December 2022</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -299,7 +300,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Data science instructor and mentor</h3>
+                            <h3 class="mb-0">Data mentor</h3>
                             <div class="subheading mb-3"><a href="https://sisteranalyst.org/"> Sister Analyst </a></div>
                                 <p> Main tasks include: </p>
                                 <ul>
@@ -307,6 +308,28 @@
                                 </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2020 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Mentor in the energy sector </h3>
+                            <div class="subheading mb-3"><a href="https://thewun.co.uk/mentors/angeliki-loukatou/"> Women in Utilities </a></div>
+                                <p> Main tasks include: </p>
+                                <ul>
+                                    <li>Providing mentoring anc coaching to women in order to empower their leadership and professional skills and move to the next career level (2 mentees)</li>
+                                </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2022 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Mentor in renewable energy</h3>
+                            <div class="subheading mb-3"><a href="https://www.regen.co.uk/project/women-in-renewable-energy-rewire-mentoring-programme/"> Women in Renewable Energy </a></div>
+                                <p> Main tasks include: </p>
+                                <ul>
+                                    <li>Providing mentoring anc coaching to women in order to empower their leadership and professional skills and move to the next career level (2 mentees)</li>
+                                </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2021 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -318,6 +341,7 @@
                     </div>
                     <h3 class="mb-0"> Previous roles </h3>
                     <ul>
+                        <li> Digital Lead of EDF Women's Network (Jun. 2020 - Sep. 2022) </li>
                         <li> Vice-chair of the IEEE PES Women in Power Network of the UK&I (Jun. 2020 - Jan. 2022) </li>
                         <li> Event Coordinator at Cigre UK NGN (Nov. 2020 - Oct. 2021) </li> 
                         <li> Membership development officer and student branch coordinator at the national committee of IEEE UK&I PES (Sep. 2019 - Dec. 2020)</li>
@@ -334,6 +358,7 @@
                     <h2 class="mb-5">Presentations</h2>
                     <p>Energy-storage and low-carbon technologies related presentations</p>
                     <ol>
+                        <li> Long-term projections of electricity storage in the UK, part of our Future Energy Scenarios (FES) work, January 2023. </li>
                         <li> The role of energy storage in the GB energy system, during Energy Systems Catapult Dissemination Event for Port Decarbonisation, November 2022. </li>
                         <li> Effective ways of working with energy storage, during Manchester's MEEPS Conference, November 2022. </li>
                         <li> The business case of Green Hydrogen, during Cigre Paris Showcase August 2022. </li>
