--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                             <div class="subheading mb-3"><a href="https://thewun.co.uk/mentors/angeliki-loukatou/"> Women in Utilities </a></div>
                                 <p> Main tasks include: </p>
                                 <ul>
-                                    <li>Providing mentoring anc coaching to women in order to empower their leadership and professional skills and move to the next career level (2 mentees)</li>
+                                    <li>Providing mentoring and coaching to women working in utilities in order to empower their leadership and professional skills and move to the next career level (2 mentees)</li>
                                 </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">January 2022 - Present</span></div>
@@ -326,7 +326,7 @@
                             <div class="subheading mb-3"><a href="https://www.regen.co.uk/project/women-in-renewable-energy-rewire-mentoring-programme/"> Women in Renewable Energy </a></div>
                                 <p> Main tasks include: </p>
                                 <ul>
-                                    <li>Providing mentoring anc coaching to women in order to empower their leadership and professional skills and move to the next career level (2 mentees)</li>
+                                    <li>Providing mentoring and coaching to women working in the renewable sector in order to empower their leadership and professional skills and move to the next career level (2 mentees)</li>
                                 </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">January 2021 - Present</span></div>
