--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="subheading mb-5">
                         <a href="mailto:angeliki.loukatou@nationalgrideso.com">angeliki.loukatou@nationalgrideso.com</a>
                     </div>
-                    <p class="lead mb-5">Most of the people I know call me Kelly. I currently work as an Energy Insight Lead at National Grid ESO, developing their Future Energy Scenarios. Prior to this, I was a Lead Research Engineer at the R&D Centre of EDF Energy UK and the Digital Lead of EDF Women's Network. Before that, I was a modelling analyst at Energy Systems Catapult, working as part of their system integration and innovation team and exploring energy storage and second-life batteries. I have a passion for energy storage and hence, I pursued a PhD in battery storage in the Centre for Doctoral Training in Power Networks of The University of Manchester (UoM). In addition, I have currently submitted my chartered engineering application and I also obtained my first professional qualification as Certified Associate in Project Management (CAPM) with the Project Management Institute (PMI) in December 2017.</p>
+                    <p class="lead mb-5">Most of the people I know call me Kelly. I am a Dr and a Chartered Engineer. I currently work as an Energy Insight Lead at National Grid ESO, developing their Future Energy Scenarios. I am also the Event Lead of Women in Non-Traditional Roles in National Grid, UK. Prior to this, I was a Lead Research Engineer at the R&D Centre of EDF Energy UK and the Digital Lead of EDF Women's Network. Before that, I was a modelling analyst at Energy Systems Catapult, working as part of their system integration and innovation team and exploring energy storage and second-life batteries. I have a passion for energy storage and hence, I pursued a PhD in battery storage in the Centre for Doctoral Training in Power Networks of The University of Manchester (UoM). In addition, I obtained my first professional qualification as Certified Associate in Project Management (CAPM) with the Project Management Institute (PMI) in December 2017.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/angeliki-l/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/AngelikiLk"><i class="fab fa-github"></i></a>
@@ -358,6 +358,7 @@
                     <h2 class="mb-5">Presentations</h2>
                     <p>Energy-storage and low-carbon technologies related presentations</p>
                     <ol>
+                        <li> Poential electricity storage routes to 2050, Society of Chemical Industry (SCI) Workshop, February 2023. </li>
                         <li> Long-term projections of electricity storage in the UK, part of our Future Energy Scenarios (FES) work, January 2023. </li>
                         <li> The role of energy storage in the GB energy system, during Energy Systems Catapult Dissemination Event for Port Decarbonisation, November 2022. </li>
                         <li> Effective ways of working with energy storage, during Manchester's MEEPS Conference, November 2022. </li>
