--- a/index.html
+++ b/index.html
@@ -358,6 +358,7 @@
                     <h2 class="mb-5">Presentations</h2>
                     <p>Energy-storage and low-carbon technologies related presentations</p>
                     <ol>
+                        <li> Best practices used when working with electricity storage technologies, IEEE PES Women in Power- Birmingham Webinar, March 2023. </li>
                         <li> Poential electricity storage routes to 2050, Society of Chemical Industry (SCI) Workshop, February 2023. </li>
                         <li> Long-term projections of electricity storage in the UK, part of our Future Energy Scenarios (FES) work, January 2023. </li>
                         <li> The role of energy storage in the GB energy system, during Energy Systems Catapult Dissemination Event for Port Decarbonisation, November 2022. </li>
