--- a/index.html
+++ b/index.html
@@ -433,6 +433,14 @@
                     <ul class="fa-ul mb-0">
                         <li>
                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                           <b> ESO Award:</b> 'Find a better way' for contributing to the DEI interviews within NG ESO.
+                        </li>
+                        <li>
+                           <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                           <b> ESO Award:</b> 'Make it happen' for contributing massively to adequacy engagement within NG ESO.
+                        </li>
+                        <li>
+                           <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                            <b> Strategy and Corporate Affairs - Team Away Day:</b> Runner up for the most helpful and dedicated employee in the S&C affairs department.
                         </li>
                         <li>
