--- a/index.html
+++ b/index.html
@@ -433,15 +433,15 @@
                     <ul class="fa-ul mb-0">
                         <li>
                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                           <b> ESO Award:</b> 'Find a better way' for contributing to the DEI interviews within NG ESO.
+                           <b> ESO Award:</b> 'Find a better way' for contributing to the DEI interviews within NG ESO (March 2023).
                         </li>
                         <li>
                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                           <b> ESO Award:</b> 'Make it happen' for contributing massively to adequacy engagement within NG ESO.
+                           <b> ESO Award:</b> 'Make it happen' for contributing massively to adequacy engagement within NG ESO (March 2023).
                         </li>
                         <li>
                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                           <b> Strategy and Corporate Affairs - Team Away Day:</b> Runner up for the most helpful and dedicated employee in the S&C affairs department.
+                           <b> Strategy and Corporate Affairs - Team Away Day:</b> Runner up for the most helpful and dedicated employee in the S&C affairs department (April 2022).
                         </li>
                         <li>
                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
