--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                     <h2 class="mb-5">Publications</h2>
                     <ol> 
                          <li> 
-                             Potential electricity storage routes towards 2050, <a href="https://www.nationalgrideso.com/document/273166/download"> ESO Thought Piece</a> at National Grid ESO, December 2022.
+                             Potential electricity storage routes towards 2050, <a href="https://www.nationalgrideso.com/document/273166/download"> National Grid ESO Thought Piece</a> at National Grid ESO, December 2022.
                         </li>    
                          <li>
                              Business cases for green hydrogen, Paris Cigre Showcase 2022, August 2022.
@@ -433,11 +433,27 @@
                     <ul class="fa-ul mb-0">
                         <li>
                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                           <b> ESO Award:</b> 'Find a better way' for contributing to the DEI interviews within NG ESO (March 2023).
+                           <b> ESO Appreciate Award:</b> 'Find a better way - Embrace the power and opportunity of diversity' for contributing signifcantly to DEI activities across National Grid ESO (April 2023).
                         </li>
                         <li>
                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                           <b> ESO Award:</b> 'Make it happen' for contributing massively to adequacy engagement within NG ESO (March 2023).
+                           <b> ESO Appreciate Award:</b> 'Do the right thing - Be inclusive, supporting and caring for each other' for delivering the 'I am Remarkable' workshops withing National Grid ESO (April 2023).
+                        </li>
+                        <li>
+                           <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                           <b> ESO Appreciate Award:</b> 'Find a better way - Embrace learning and new ideas' for becoming a Chartered Engineer (April 2023).
+                        </li>
+                        <li>
+                           <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                           <b> ESO Appreciate Award:</b> 'Make it happen - Take personal ownership of delivering results' for contributing to hydrogen expansion activities within NG ESO (April 2023).
+                        </li>
+                        <li>
+                           <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                           <b> ESO Appreciate Award:</b> 'Make it happen - Be bold and act with passion and purpose' for contributing to the DEI panel interviews within NG ESO (March 2023).
+                        </li>
+                        <li>
+                           <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                           <b> ESO Appreciate Award:</b> 'Make it happen - Take personal ownership of delivering results' for contributing massively to power system adequacy and resilience engagement with relevant stakeholders (March 2023).
                         </li>
                         <li>
                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
