--- a/index.html
+++ b/index.html
@@ -445,11 +445,11 @@
                         </li>
                         <li>
                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                           <b> ESO Appreciate Award:</b> 'Make it happen - Take personal ownership of delivering results' for contributing to hydrogen expansion activities within NG ESO (April 2023).
+                           <b> ESO Appreciate Award:</b> 'Make it happen - Take personal ownership of delivering results' for contributing to hydrogen expansion activities within National Grid ESO (April 2023).
                         </li>
                         <li>
                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                           <b> ESO Appreciate Award:</b> 'Make it happen - Be bold and act with passion and purpose' for contributing to the DEI panel interviews within NG ESO (March 2023).
+                           <b> ESO Appreciate Award:</b> 'Make it happen - Be bold and act with passion and purpose' for contributing to the DEI panel interviews within National Grid ESO (March 2023).
                         </li>
                         <li>
                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
