--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                     <h2 class="mb-5">Presentations</h2>
                     <p>Energy-storage and low-carbon technologies related presentations</p>
                     <ol>
-                        <li> When the wind does not blow: Long duration energy storage brekafast briefing with Energy UK and DESNZ, April 2023. Recording <a href="https://us06web.zoom.us/rec/play/mew6KZlMnE4rusKfR4YVauRAVjYuHbHK7n_yn7SIA_nl3R7khl0ych90457dS_HzHE_RiMEUwIPwaVRD.Hzc7fS01UffwHw9D?autoplay=true&startTime=1681977859000"> here</a>. </li>
+                        <li> When the wind does not blow: Long duration energy storage breakfast briefing with Energy UK and DESNZ, April 2023. Recording <a href="https://us06web.zoom.us/rec/play/mew6KZlMnE4rusKfR4YVauRAVjYuHbHK7n_yn7SIA_nl3R7khl0ych90457dS_HzHE_RiMEUwIPwaVRD.Hzc7fS01UffwHw9D?autoplay=true&startTime=1681977859000"> here</a>. </li>
                         <li> Best practices used when working with electricity storage technologies, IEEE PES Women in Power- Birmingham Webinar, March 2023. </li>
                         <li> Poential electricity storage routes to 2050, Society of Chemical Industry (SCI) Workshop, February 2023. </li>
                         <li> Long-term projections of electricity storage in the UK, part of our Future Energy Scenarios (FES) work, January 2023. </li>
