--- a/index.html
+++ b/index.html
@@ -239,7 +239,32 @@
             <!-- Volunteering-->
             <section class="resume-section" id="volunteering">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Volunteering</h2>                        
+                    <h2 class="mb-5">Volunteering</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Industry Chair of the first IET Energy Storage Conference</h3>
+                            <div class="subheading mb-3"><a href="https://energystorage.theiet.org/"> Institution of Engineering and Technology (IET) </a></div>
+                                <p> Main tasks include: </p>
+                                <ul>
+                                    <li> Energy storage is a key enabler for the decarbonisation of our energy systems to achieve a Net-Zero future. Our first Energy Storage conference will provide a platform for energy storage professionals to discuss and share their work with their peers, colleagues, and leading figures in the field.</li>
+                                    <li> Created technical scope of the conference based on key storage research areas:
+                                        <ol>
+                                         <li> Energy storage for decarbonisation of transportation </li>
+                                         <li> Energy storage integration with power grids </li>
+                                         <li> Emerging storage technologies </li>
+                                         <li> Circular economy in energy storage </li>
+                                         <li> Energy storage market, regulation and policy </li>
+                                         <li> Energy storage infrastructure and supply chain. </li>   
+                                        </ol>
+                                    </li>
+                                    <li> Reviewed technical papers for the conference and ensured high research quality </li>
+                                    <li> Arranged for key industry speakers' participation with high impact presentations and insights </li>
+                                    <li> Attended bi-weekly meetings with key IET representatives and the organising committee </li>
+                                    <li> About to open the conference in Glasgow during 15-16 November 2023. </li>
+                                </ul>                                
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">November 2022 - Present</span></div>
+                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Chair of Women in Power Committee (UK & Ireland Chapter)</h3>
@@ -258,8 +283,7 @@
                                     <li> Collaboration with UK, Women in Engineering panel during PMAPS, June 2022</li>
                                     <li> Panel discussion with IEEE PES Women in Power with theme "Inspiring the Next Generation of Female Engineers", September 2022 </li>
                                     <li> Women in Power session during MEEPS 2022 "Towards a sustainable and diverse future", November 2022 </li>
-                                </ol>
-                                
+                                </ol>    
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">November 2021 - Present</span></div>
                     </div>
