--- a/index.html
+++ b/index.html
@@ -520,6 +520,15 @@
                     </a>
                 </div>
             </section>
+            <section class="resume-section" id="news">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">News</h2>
+                    <p>Latest news include:</p>
+                    <p> FES 2023 is out and full of insights (July 2023). For more details please see <a href="https://www.nationalgrideso.com/future-energy/future-energy-scenarios">here</a>. Please also see my article around flexibility insights <a href="https://www.linkedin.com/feed/update/urn:li:activity:7085559426589278208/">here</a>. </p> 
+                    <p> Hooray! I am now nominated by the <a href="https://www.theiet.org/">IET</a> for the <a href="https://www.wes.org.uk/activities/awards/karen-burt-details/">Karen Burt</a> award - more updates in October 2023! </p>
+                    <p> I have the honour to be opening the first IET Energy Storage Conference in Glasgow during November 2023.</p>
+                </div>
+            </section>
             <hr class="m-0" />
         </div>
         <!-- Bootstrap core JS-->
