--- a/index.html
+++ b/index.html
@@ -324,17 +324,6 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Data mentor</h3>
-                            <div class="subheading mb-3"><a href="https://sisteranalyst.org/"> Sister Analyst </a></div>
-                                <p> Main tasks include: </p>
-                                <ul>
-                                    <li>Providing workshops, training and mentoring to women in order to empower their data and professional skills, collaboration with Serbia</li>
-                                </ul>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2020 - Present</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
                             <h3 class="mb-0">Mentor in the energy sector </h3>
                             <div class="subheading mb-3"><a href="https://thewun.co.uk/mentors/angeliki-loukatou/"> Women in Utilities </a></div>
                                 <p> Main tasks include: </p>
@@ -422,8 +411,11 @@
                     <h2 class="mb-5">Publications</h2>
                     <ol> 
                          <li> 
+                             Future Energy Scenarios 2023 - Main author of the introduction and flexibility chapters, <a href="https://www.nationalgrideso.com/future-energy/future-energy-scenarios"> National Grid ESO Publication</a>, July 2023. 
+                         </li>
+                         <li> 
                              Potential electricity storage routes towards 2050, <a href="https://www.nationalgrideso.com/document/273166/download"> National Grid ESO Thought Piece</a> at National Grid ESO, December 2022.
-                        </li>    
+                         </li>    
                          <li>
                              Business cases for green hydrogen, Paris Cigre Showcase 2022, August 2022.
                          </li>
@@ -520,6 +512,7 @@
                     </a>
                 </div>
             </section>
+            <!-- News-->
             <section class="resume-section" id="news">
                 <div class="resume-section-content">
                     <h2 class="mb-5">News</h2>
